# bluerov2_mavros

./: package.xml  setup.cfg  setup.py
config/: bridge.yaml
launch/: bluerov2_launch.yaml  bridge.launch.py  example_launch.yaml  hardware_launch.yaml  simulation.launch.py  simulation_launch.yaml
rosmav/: bluerov2_camera_interface.py  bluerov2_hardware_interface.py  bluerov2_simulation_interface.py  ros_bluerov2_interface.py
