<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosmav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="msis@blksail.ai">Mohamed Saad Ibn Seddik</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>mavlink</depend>
  <depend>rclpy</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>python3-gi</depend>
  <depend>python3-gst-1.0</depend>
  <depend>gstreamer1.0-plugins-good</depend>
  <depend>gstreamer1.0-plugins-bad</depend>
  <depend>gstreamer1.0-libav</depend>
  <depend>ros_gz_bridge</depend>
  

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
